--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -2,7 +2,7 @@ default: true
 
 # MD013/line-length - Line length
 MD013:
-  line_length: 120
+  line_length: 999
   heading_line_length: 120
   code_block_line_length: 120
   code_blocks: true
@@ -10,3 +10,5 @@ MD013:
   headings: true
   strict: false
   stern: false
+
+MD029: false
